# dot-herder

./: Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: rust-ci.yml
src/: cli.rs  config.rs  file_operations.rs  git_operations.rs  main.rs  tui.rs
src/secret/: mod.rs  scanner.rs
src/secret/testdata/: contains-api-key.txt
